--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Politique de Confidentialité - EasyMuscuBoard</title>
+    <title>Règles de Confidentialité - EasyMuscuBoard</title>
     <style>
         /* Styles de base pour la lisibilité */
         body {
@@ -30,8 +30,8 @@
 </head>
 <body>
 
-    <h1>Politique de Confidentialité pour EasyMuscuBoard</h1>
-    <p>Cette politique de confidentialité a été élaborée par Roch MANFREDINI et régit la manière dont l'application mobile <strong>EasyMuscuBoard</strong> (ci-après dénommée "l'Application") gère les données de ses utilisateurs.</p>
+    <h1>Règles de Confidentialité pour EasyMuscuBoard</h1>
+    <p>Ces règles de confidentialité ont été élaborée par Roch MANFREDINI et régissent la manière dont l'application mobile <strong>EasyMuscuBoard</strong> (ci-après dénommée "l'Application") gère les données de ses utilisateurs.</p>
 
     <h2>1. Collecte et Utilisation des Données</h2>
 
@@ -59,7 +59,7 @@
     </ul>
 
     <h3>B. Sécurité</h3>
-    <p>Nous nous engageons à mettre en œuvre des mesures de sécurité conformes aux normes de l'industrie pour protéger les données stockées sur l'appareil de l'utilisateur. Cependant, il est important de noter que la sécurité des données dépend largement des paramètres de sécurité et des pratiques de l'appareil de l'utilisateur.</p>
+    <p>Je m'engage à mettre en œuvre des mesures de sécurité conformes aux normes de l'industrie pour protéger les données stockées sur l'appareil de l'utilisateur. Cependant, il est important de noter que la sécurité des données dépend largement des paramètres de sécurité et des pratiques de l'appareil de l'utilisateur.</p>
 
     <h2>3. Services Tiers</h2>
 
@@ -72,15 +72,15 @@
     <h2>4. Publics Cibles et Confidentialité des Enfants</h2>
     <ul>
         <li>L'Application n'est <strong>pas</strong> destinée aux enfants de moins de 13 ans.</li>
-        <li>Étant donné que l'Application ne collecte aucune donnée personnelle, nous n'avons pas d'informations personnelles provenant d'enfants de moins de 13 ans.</li>
+        <li>Étant donné que l'Application ne collecte aucune donnée personnelle, je n'ai pas d'informations personnelles provenant d'enfants de moins de 13 ans.</li>
     </ul>
 
-    <h2>5. Modifications de la Politique de Confidentialité</h2>
-    <p>Nous pouvons être amenés à mettre à jour notre Politique de Confidentialité de temps à autre. Nous informerons l'utilisateur de tout changement en publiant la nouvelle politique sur cette page. Il est conseillé de consulter périodiquement cette Politique de Confidentialité pour prendre connaissance des modifications éventuelles.</p>
+    <h2>5. Modifications de la Règle de Confidentialité</h2>
+    <p>Je peux être amenés à mettre à jour les Règles de Confidentialité de temps à autre. J'informerais l'utilisateur de tout changement en publiant la nouvelle politique sur cette page. Il est conseillé de consulter périodiquement cette Politique de Confidentialité pour prendre connaissance des modifications éventuelles.</p>
 
     <h2>6. Contactez-nous</h2>
     <div class="contact-info">
-        <p>Si vous avez des questions ou des suggestions concernant cette Politique de Confidentialité, veuillez nous contacter :</p>
+        <p>Si vous avez des questions ou des suggestions concernant ces Règles de Confidentialité, veuillez me contacter :</p>
         <p><strong>Propriétaire de l'Application :</strong> Roch MANFREDINI</p>
         <p><strong>Par e-mail :</strong> <a href="mailto:roch.manfredini@gmail.com">roch.manfredini@gmail.com</a></p>
     </div>
